MPP wizard test: add project import